fix: gap in account management

--- a/src/pages/seller-pages/SellerProfilePage/SellerProfilePage.module.scss
+++ b/src/pages/seller-pages/SellerProfilePage/SellerProfilePage.module.scss
@@ -51,6 +51,10 @@
     margin-bottom: 50px;
   }
 
+  .account_management {
+    gap: 36px;
+  }
+
 }
 
 @media only screen and (max-width: 1000px) {
@@ -80,6 +84,10 @@
 
   .business_info > div {
     margin-bottom: 10px;
+  }
+
+  .account_management {
+    gap: 8px;
   }
 
 }
